samples/_failures_safe/1761451402_4c1801_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e47374c.c: In function ‘main’:
./samples/SAFE/__tmp_2e47374c.c:128:9: error: ‘MATRI’ undeclared (first use in this function)
  128 |         MATRI
      |         ^~~~~
./samples/SAFE/__tmp_2e47374c.c:128:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2e47374c.c:128:14: error: expected ‘;’ at end of input
  128 |         MATRI
      |              ^
      |              ;
./samples/SAFE/__tmp_2e47374c.c:128:9: error: expected declaration or statement at end of input
  128 |         MATRI
      |         ^~~~~
./samples/SAFE/__tmp_2e47374c.c:128:9: error: expected declaration or statement at end of input
